# libcoro

./: CMakeLists.txt  README.md  tsan.supp
.github/workflows/: ci-android.yml  ci-ubuntu.yml
include/coro/: condition_variable.hpp  event.hpp  io_scheduler.hpp  mutex.hpp  queue.hpp  ring_buffer.hpp  semaphore.hpp  shared_mutex.hpp  stop_token_compat.hpp  task.hpp  thread_pool.hpp  when_any.hpp
include/coro/detail/: cache_pool.hpp  lockfree_queue.hpp  poll_info.hpp  tsan.hpp  work_stealing_deque.hpp
src/: condition_variable.cpp  event.cpp  io_scheduler.cpp  mutex.cpp  thread_pool.cpp
test/: CMakeLists.txt  test_condition_variable.cpp  test_ring_buffer.cpp  test_semaphore.cpp  test_shared_mutex.cpp  test_task.cpp  test_task_container.cpp  test_when_any.cpp  test_work_stealing_deque.cpp  tsan.supp
test/android/: build.gradle  settings.gradle
test/android/src/main/cpp/: CMakeLists.txt  main.cpp
